--- a/tests/codeception/backend/acceptance.suite.yml
+++ b/tests/codeception/backend/acceptance.suite.yml
@@ -11,18 +11,19 @@
 class_name: AcceptanceTester
 modules:
     enabled:
+        - Filesystem
+        - Yii2
+        - WebDriver
         - PhpBrowser
         - tests\codeception\common\_support\FixtureHelper
-# you can use WebDriver instead of PhpBrowser to test javascript and ajax.
-# This will require you to install selenium. See http://codeception.com/docs/04-AcceptanceTests#Selenium
-# "restart" option is used by the WebDriver to start each time per test-file new session and cookies,
-# it is useful if you want to login in your app in each test.
-#        - WebDriver
     config:
+        Yii2:
+            configFile: '../config/backend/acceptance.php'
         PhpBrowser:
-# PLEASE ADJUST IT TO THE ACTUAL ENTRY POINT WITHOUT PATH INFO
             url: http://admintest.yii2app
-#        WebDriver:
-#            url: http://localhost:8080
-#            browser: firefox
-#            restart: true
+        WebDriver:
+           url: http://admintest.yii2app
+           browser: phantomjs
+           capabilities:
+                phantomjs.cli.args: ['--ignore-ssl-errors=true']
+                webStorageEnabled: true
